actigraphy (GENEAread / GGIR): rewrites

--- a/R-package-catalogue.Rmd
+++ b/R-package-catalogue.Rmd
@@ -1,4 +1,3 @@
-
 # R Packages for EMA Research {#rcat}
 
 Many R packages exist that can help you in the management and analysis of EMA
@@ -10,7 +9,7 @@ Table: (\#tab:rcat) List of R packages that are useful in EMA research.
 
 | **Category**    |**Package**        | **Description**                         |
 |:----------------|:------------------|:----------------------------------------|
-| **Accelerometry**| GENEAread / GGIR | Import, pre-process and analyze raw accelerometer data. |
+| **Actigraphy**| GENEAread / GGIR | Import, pre-process and analyze raw accelerometer data. |
 |                 | PhysicalActivity  | Analyze Actigraph accelerometer data.   | 
 | **Data Management & Visual Exploration**| dplyr | Data transformation.            |
 |                 | ggplot2           | Create graphs.                          |
@@ -26,43 +25,113 @@ Table: (\#tab:rcat) List of R packages that are useful in EMA research.
 | **Time series analysis** | lomb     | Calculate the Lomb-Scargle Periodogram for unevenly sampled time series. |
 
 
-## Accelerometry
+## Actigraphy
 
 Accelerometer data need considerable pre-processing before final analyses can be
 run. Raw data have to be read in from a variety of brand-specific file formats,
 data have to re-calibrated on a per-device basis, non-wear periods have to
 detected, and summarizing measures, such as activity counts and
 energy-expenditure measures, have to be calculated from imputed triangular (x,
-y, x) data, often in several time windows (i.e., epochs). 
+y, x) data, often in several time windows (i.e., epochs).
 
 ### GENEAread
 \index{Packages!GENEAread}
-\index{Packages!GGIR}
 
-Package *GGIR* [@R-GGIR] is a package to pre-process raw accelerometry data
-from three brands of wearables that are widely used in sleep and physical
-activity research: [GENEActiv](https://www.geneactiv.org/),
-[ActiGraph](http://actigraphcorp.com/) and [Axivity](http://axivity.com/). GGIR
-includes package **GENEAread** [@R\_GENEAread], with which raw data can be
-imported into R for further processing, as illustrated below.
+[GENEActiv](https://www.geneactiv.org/) is a wrist-worn accelerometer that is
+widely used in sleep and physical activity research. With package **GENEAread**
+[@R\_GENEAread], raw GENEActiv binary files can be imported into R for further
+processing, as illustrated below.
 
-```{r genearead-example, out.with = "100%", fig.asp = .4, fig.cap = "Raw sensor data of a GENEActiv wrist-worn tri-axial accelerometer (down-sampled from 100Hz to 5Hz).", message = FALSE, warning = FALSE}
-# Reading raw GENEActiv data.
+```{r GENEAread-example, message = FALSE, warning = FALSE, eval = TRUE, include=TRUE, results='hide'}
+# Read raw GENEActiv data.
 library(GENEAread)
-library(ggplot2)
-library(tidyr)
-
-out <- capture.output(
-  dat <- read.bin(system.file("binfile/TESTfile.bin", package = "GENEAread"),
-                  verbose = FALSE, downsample = 20))
-
+dat <- read.bin(system.file("binfile/TESTfile.bin", package = "GENEAread"),
+                  verbose = FALSE, downsample = 20)
 d <- as.data.frame(dat$data.out)
-d <- gather(d, key = "sensor", value = "value", -timestamp)
 d$timestamp <- as.POSIXct(d$timestamp, origin = "1970-01-01", tz = "UTC")
+d[1:4, ]
+```
 
+```{r genearead-example-kable, eval = TRUE, echo = FALSE}
+knitr::kable(d[1:4, ], digits = 6)
+```
+
+By having access to the raw data, you are free to explore the data further in
+any you want. For instance, to plot the raw data captured by each sensor, type:
+
+```{r genearead-plot-example, out.with = "100%", fig.asp = .3, fig.cap = "Raw sensor data of a GENEActiv accelerometer.", message = FALSE, warning = FALSE}
+# Plot raw GENEActive data, with ggplot
+library(ggplot2); library(tidyr)
+d <- gather(d, key = "sensor", value = "value", -timestamp)
 ggplot(d, aes(x = timestamp, y = value)) + 
   geom_line() + 
   facet_wrap(~sensor, scales = "free_y")
+```
+
+
+### GGIR
+\index{Packages!GGIR}
+
+Package *GGIR* [@R-GGIR] is a package to pre-process raw accelerometry data from
+three accelerometer brands: [ActiGraph](http://actigraphcorp.com/),
+[Axivity](http://axivity.com/), and [GENEActiv](https://www.geneactiv.org/)
+(GGIR includes package `GENEAread`). The package is in active development. New
+features are introduced and bugs are fixed on a regular basis. If you consider
+to use `GGIR` for your project, you may want to install the development version,
+which is on [GitHub](https://github.com/wadpac/GGIR).
+
+```{r ggir-install-example, eval = FALSE}
+library(devtools)
+install_github("wadpac/GGIR", dependencies = TRUE)
+```
+
+`GGIR`'s main function is `g.shell.GGIR`, with which multiple accelerometer data
+files can be imported, calibrated, cleaned and analyzed. The example below shows
+an example configuration of this function. See `?g.shell.GGIR` (and `?g.part1`,
+?`g.part2`, to `g.part5`) to learn the meaning of each parameter. If you get
+lost or run into a problem, you can ask the package developers or other users
+for help via the GGIR Google discussion forum, at
+<https://groups.google.com/forum/#!forum/rpackageggir>. 
+
+```{r ggir-example, eval = FALSE}
+# Import actigraphy data with GGIR
+library(GGIR)
+g.shell.GGIR(#=======================================
+             # Shell configuration:
+             mode = c(1, 2, 3, 4),
+             datadir="./data/raw", outputdir="./data",
+             desiredtz = "Europe/Amsterdam", # set timezone!
+             f0 = 1, f1 = 2, overwrite = FALSE,
+             #-------------------------------
+             # Part 1: read, calibrate, extract features
+             do.enmo = TRUE, do.anglez=TRUE,
+             chunksize = 1, printsummary = TRUE,
+             #-------------------------------
+             # Part 2:
+             strategy = 1, ndayswindow=7,
+             hrs.del.start = 0, hrs.del.end = 0,
+             maxdur = 8,  includedaycrit = 10,
+             winhr = c(5,10),
+             qlevels = c(c(1380/1440),c(1410/1440)),
+             qwindow = c(0,24),
+             ilevels = c(seq(0, 400, by=50), 8000),
+             mvpathreshold = c(100,125), 
+             bout.metric = 4, closedbout = FALSE,
+             #-------------------------------
+             # Part 3: Sleep detection
+             #-------------------------------
+             timethreshold= c(5), anglethreshold=5,
+             ignorenonwear = TRUE,
+             #-------------------------------
+             # Part 4: Sleep summaries (per person)
+             excludefirstlast = TRUE, includenightcrit = 16,
+             def.noc.sleep = c(21, 9),
+             relyonsleeplog = TRUE, nnights = 3,
+             #-----------------------------------
+             # Report generation
+             do.report = c(2, 4), visualreport = TRUE,
+             dofirstpage = TRUE, viewingwindow = 1
+)
 ```
 
 ### PhysicalActivity
@@ -356,7 +425,7 @@ powerSim(model1,
 ```
 
 
-## simstudy
+### simstudy
 
 ```{r simstudy-example}
 library(simstudy)
