--- a/book.bib
+++ b/book.bib
@@ -1655,7 +1655,17 @@ year = {1999}
   publisher={Oxford University Press}
 }
 
-@Article{VanHeest2014,
+
+@article{VanHees2013,
+  author = {{Van Hees}, Vincent T. and Gorzelniak, Lukas and {Dean Le{\'{o}}n}, Emmanuel Carlos and Eder, Martin and Pias, Marcelo and Taherian, Salman and Ekelund, Ulf and Renstr{\"{o}}m, Frida and Franks, Paul W. and Horsch, Alexander and Brage, S{\o}ren}
+  doi = {10.1371/journal.pone.0061691},
+  journal = {PLoS ONE},
+  title = {{Separating Movement and Gravity Components in an Acceleration Signal and   Implications for the Assessment of Human Daily Physical Activity}},
+  year = {2013}
+}
+
+
+@Article{VanHees2014,
   author  = {{Van Hees}, Vincent T. and Fang, Zhou and Langford, Joss and Assah,Felix and Mohammad, A and da Silva, Inacio C and Trenell, Michael I and White, Tom and Wareham, Nicholas J and Brage, Soren},
   title   = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: {A}n evaluation on four continents},
   journal = {Journal of Applied Physiology},
@@ -1667,7 +1677,7 @@ year = {1999}
   url     = {https://www.physiology.org/doi/10.1152/japplphysiol.00421.2014},
 }
 
-@article{VanHeest2015,
+@article{VanHees2015,
   title = {A novel, open access method to assess sleep duration using a wrist-worn accelerometer},
   author = {{Van Hees}, Vincent T. and  Sabia, Severine and Anderson, Kirstie N  and  Denton, Sarah J and  Oliver, James and  Catt, Michael and  Abell, Jesica G and  Kivimaki, Mika and  Trenell, Michael I and  Singh-Manoux, Archana},
   doi = {10.1371/journal.pone.0142533},
