fix syntax error

--- a/book.bib
+++ b/book.bib
@@ -1657,7 +1657,7 @@ year = {1999}
 
 
 @article{VanHees2013,
-  author = {{Van Hees}, Vincent T. and Gorzelniak, Lukas and {Dean Le{\'{o}}n}, Emmanuel Carlos and Eder, Martin and Pias, Marcelo and Taherian, Salman and Ekelund, Ulf and Renstr{\"{o}}m, Frida and Franks, Paul W. and Horsch, Alexander and Brage, S{\o}ren}
+  author = {{Van Hees}, Vincent T. and Gorzelniak, Lukas and {Dean Le{\'{o}}n}, Emmanuel Carlos and Eder, Martin and Pias, Marcelo and Taherian, Salman and Ekelund, Ulf and Renstr{\"{o}}m, Frida and Franks, Paul W. and Horsch, Alexander and Brage, S{\o}ren},
   doi = {10.1371/journal.pone.0061691},
   journal = {PLoS ONE},
   title = {{Separating Movement and Gravity Components in an Acceleration Signal and   Implications for the Assessment of Human Daily Physical Activity}},
