--- a/EMA.Rmd
+++ b/EMA.Rmd
@@ -75,7 +75,7 @@ library(emaph)
 img <- readJPEG("images/instruments/geneactive/geneactive.jpg") 
 g <- rasterGrob(img, interpolate=TRUE) 
 
-d <-  subset(genea,
+d <-  subset(geneactiv,
               timestamp > "2018-06-01 13:00" &
               timestamp < "2018-06-01 14:00" &
               id == 1)
